@@ -829,10 +829,10 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
-DECL|method|load
-specifier|public
+DECL|method|loadSource
+specifier|protected
 name|Source
-name|load
+name|loadSource
 parameter_list|()
 throws|throws
 name|IOException
@@ -1192,6 +1192,24 @@ DECL|method|getDirectSource
 specifier|public
 name|Source
 name|getDirectSource
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|this
+operator|.
+name|getSource
+argument_list|()
+return|;
+comment|// don't cache twice
+block|}
+annotation|@
+name|Override
+DECL|method|loadDirectSource
+specifier|protected
+name|Source
+name|loadDirectSource
 parameter_list|()
 throws|throws
 name|IOException
