@@ -402,7 +402,41 @@ name|index
 operator|.
 name|DocValues
 operator|.
+name|SourceCache
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|DocValues
+operator|.
 name|Type
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|DocValues
+operator|.
+name|SourceCache
+operator|.
+name|DirectSourceCache
 import|;
 end_import
 
@@ -4067,7 +4101,10 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+specifier|final
+name|DocValues
+name|docValues
+init|=
 name|MultiDocValues
 operator|.
 name|getDocValues
@@ -4076,6 +4113,62 @@ name|reader
 argument_list|,
 name|field
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|docValues
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+name|docValues
+return|;
+block|}
+if|if
+condition|(
+name|rarely
+argument_list|()
+condition|)
+block|{
+name|docValues
+operator|.
+name|setCache
+argument_list|(
+operator|new
+name|NotCachingSourceCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+operator|!
+operator|(
+name|docValues
+operator|.
+name|getCache
+argument_list|()
+operator|instanceof
+name|DirectSourceCache
+operator|)
+condition|)
+block|{
+name|docValues
+operator|.
+name|setCache
+argument_list|(
+operator|new
+name|DirectSourceCache
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|docValues
 return|;
 block|}
 annotation|@
@@ -4112,7 +4205,7 @@ case|:
 return|return
 name|values
 operator|.
-name|load
+name|loadSource
 argument_list|()
 return|;
 case|case
@@ -5190,7 +5283,7 @@ argument_list|(
 literal|"field"
 argument_list|)
 operator|.
-name|load
+name|loadSource
 argument_list|()
 operator|.
 name|getInt
@@ -5353,7 +5446,7 @@ argument_list|(
 literal|"field"
 argument_list|)
 operator|.
-name|load
+name|loadSource
 argument_list|()
 operator|.
 name|getInt
@@ -7425,6 +7518,67 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+comment|/**   *   */
+DECL|class|NotCachingSourceCache
+specifier|public
+specifier|static
+class|class
+name|NotCachingSourceCache
+extends|extends
+name|SourceCache
+block|{
+annotation|@
+name|Override
+DECL|method|load
+specifier|public
+name|Source
+name|load
+parameter_list|(
+name|DocValues
+name|values
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|values
+operator|.
+name|loadSource
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|loadDirect
+specifier|public
+name|Source
+name|loadDirect
+parameter_list|(
+name|DocValues
+name|values
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|values
+operator|.
+name|loadDirectSource
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|invalidate
+specifier|public
+name|void
+name|invalidate
+parameter_list|(
+name|DocValues
+name|values
+parameter_list|)
+block|{}
 block|}
 block|}
 end_class
